[package]
name = "bittorrent-client"
version = "0.1.0"
authors = ["Islam El-Ashi <islam.elashi@dfinity.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "^0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
